--- a/LaboratoareTehnologiiWeb/TehnologiiWebbb.html
+++ b/LaboratoareTehnologiiWeb/TehnologiiWebbb.html
@@ -7,10 +7,10 @@
 	<body bgcolor="#4286f4">
 		
 		<ul class="nav navbar-nav topnav">
-						<a href="file:///C:/Users/Gyuri/Desktop/ProiectWeb/ProiectWebbb.html">Home</a>
-						<a href="file:///C:/Users/Gyuri/Desktop/ProiectWeb/Profile.html">Profile</a>
-						<a href="file:///C:/Users/Gyuri/Desktop/ProiectWeb/About.html">About</a>
-						<a href="file:///C:/Users/Gyuri/Desktop/ProiectWeb/Contact.html">Contact</a>
+						<a href="file:///C:/Users/Gyuri/Desktop/LaboratoareTehnologiiWeb/TehnologiiWebbb.html">Home</a>
+						<a href="file:///C:/Users/Gyuri/Desktop/LaboratoareTehnologiiWeb/Profile.html">Profile</a>
+						<a href="file:///C:/Users/Gyuri/Desktop/LaboratoareTehnologiiWeb/About.html">About</a>
+						<a href="file:///C:/Users/Gyuri/Desktop/LaboratoareTehnologiiWeb/Contact.html">Contact</a>
 		</ul>
 		
 		<footer class="site-footer">
@@ -21,6 +21,7 @@
 	<body background="../background1.png">
 
 		<h1 style="text-align:center; font-size:50px; color:#fff">Site Web Ilea Razvan</h1>
+		<h1 style="text-align:center; font-size:50px; color:#fff">Am pus in about ce am lucrat la lab6</h1>
 		
 		<div class="card">
 			<img src="https://cdn.iconscout.com/icon/free/png-256/avatar-372-456324.png" alt="Avatar" style="width:20%">
